# SgfcKit

./: .gitmodules  .travis.yml  CMakeLists.txt  NOTICE  README.md
.github/workflows/: build.yml
doc/: Bugs.md  Build.md  CMakeLists.txt  ChangeLog.md  CodingGuidelines.md  Principles.md
example/: CMakeLists.txt  SourcesList.cmake  main.mm
include/: NSValue+SGFCDate.h  SGFCArgument.h  SGFCArgumentType.h  SGFCArguments.h  SGFCBoardSize.h  SGFCBoardSizeProperty.h  SGFCColor.h  SGFCColorPropertyValue.h  SGFCCommandLine.h  SGFCComposedPropertyValue.h  SGFCConstants.h  SGFCCoordinateSystem.h  SGFCDate.h  SGFCDocument.h  SGFCDocumentReadResult.h  SGFCDocumentReader.h  SGFCDocumentWriteResult.h  SGFCDocumentWriter.h  SGFCDouble.h  SGFCDoublePropertyValue.h  SGFCExitCode.h  SGFCGame.h  SGFCGameInfo.h  SGFCGameResult.h  SGFCGameResultType.h  SGFCGameType.h  SGFCGameTypeProperty.h  SGFCGoGameInfo.h  SGFCGoMove.h  SGFCGoMovePropertyValue.h  SGFCGoPlayerRank.h  SGFCGoPlayerRankType.h  SGFCGoPlayerRatingType.h  SGFCGoPoint.h  SGFCGoPointNotation.h  SGFCGoPointPropertyValue.h  SGFCGoRuleset.h  SGFCGoRulesetType.h  SGFCGoStone.h  SGFCGoStonePropertyValue.h  (+26 more)
src/: CMakeLists.txt  SGFCConstants.mm  SGFCExceptionUtility.h  SGFCExceptionUtility.mm  SGFCMappingUtility.h  SGFCMappingUtility.mm  SGFCPrivateConstants.h  SGFCPrivateConstants.mm  SGFCWrappingUtility.h  SGFCWrappingUtility.mm  SourcesList.cmake
src/document/: SGFCComposedPropertyValue.mm  SGFCDocument.mm  SGFCGame.mm  SGFCNode.mm  SGFCNodeTraits.mm  SGFCProperty.mm  SGFCPropertyTraits.mm  SGFCPropertyValue.mm  SGFCSinglePropertyValue.mm  SGFCTreeBuilder.mm
src/document/typedproperty/: SGFCBoardSizeProperty.mm  SGFCGameTypeProperty.mm
src/document/typedpropertyvalue/: SGFCColorPropertyValue.mm  SGFCDoublePropertyValue.mm  SGFCMovePropertyValue.mm  SGFCNumberPropertyValue.mm  SGFCPointPropertyValue.mm  SGFCRealPropertyValue.mm  SGFCSimpleTextPropertyValue.mm  SGFCStonePropertyValue.mm  SGFCTextPropertyValue.mm
src/document/typedpropertyvalue/go/: SGFCGoMovePropertyValue.mm  SGFCGoPointPropertyValue.mm  SGFCGoStonePropertyValue.mm
src/factory/: SGFCKitFactory.mm  SGFCPropertyFactory.mm  SGFCPropertyValueFactory.mm
src/game/: NSValue+SGFCDate.mm  SGFCBoardSize.mm  SGFCDate.mm  SGFCGameInfo.mm  SGFCGameResult.mm  SGFCGoPlayerRank.mm  SGFCGoRuleset.mm  SGFCRoundInformation.mm
src/game/go/: SGFCGoGameInfo.mm  SGFCGoMove.mm  SGFCGoPlayerRank.mm  SGFCGoPoint.mm  SGFCGoRuleset.mm  SGFCGoStone.mm
src/interface/internal/: SGFCArgumentInternalAdditions.h  SGFCArgumentsInternalAdditions.h  SGFCBoardSizePropertyInternalAdditions.h  SGFCColorPropertyValueInternalAdditions.h  SGFCComposedPropertyValueInternalAdditions.h  SGFCDocumentInternalAdditions.h  SGFCDocumentReadResultInternalAdditions.h  SGFCDocumentWriteResultInternalAdditions.h  SGFCDoublePropertyValueInternalAdditions.h  SGFCGameInfoInternalAdditions.h  SGFCGameInternalAdditions.h  SGFCGameTypePropertyInternalAdditions.h  SGFCGoGameInfoInternalAdditions.h  SGFCGoMoveInternalAdditions.h  SGFCGoMovePropertyValueInternalAdditions.h  SGFCGoPointInternalAdditions.h  SGFCGoPointPropertyValueInternalAdditions.h  SGFCGoStoneInternalAdditions.h  SGFCGoStonePropertyValueInternalAdditions.h  SGFCMessageInternalAdditions.h  SGFCMovePropertyValueInternalAdditions.h  SGFCNodeInternalAdditions.h  SGFCNumberPropertyValueInternalAdditions.h  SGFCPointPropertyValueInternalAdditions.h  SGFCPropertyInternalAdditions.h  SGFCPropertyValueInternal.h  SGFCPropertyValueInternalAdditions.h  SGFCRealPropertyValueInternalAdditions.h  SGFCSimpleTextPropertyValueInternalAdditions.h  SGFCSinglePropertyValueInternalAdditions.h  SGFCStonePropertyValueInternalAdditions.h  SGFCTextPropertyValueInternalAdditions.h  SGFCTreeBuilderInternalAdditions.h
src/sgfc/argument/: SGFCArgument.mm  SGFCArguments.mm
src/sgfc/frontend/: SGFCCommandLine.mm  SGFCDocumentReadResult.mm  SGFCDocumentReader.mm  SGFCDocumentWriteResult.mm  SGFCDocumentWriter.mm
src/sgfc/message/: SGFCMessage.mm
test/: CMakeLists.txt  SourcesList.cmake
